--- a/packages/discvr-utils/package.json
+++ b/packages/discvr-utils/package.json
@@ -1,6 +1,9 @@
 {
     "name": "discvr-utils",
     "version": "0.0.0",
+    "scripts": {
+        "test": "echo \"Testing utils\""
+    },
     "dependencies": {
         "react": "^18.2.0"
     }
