Added a lint that will fail
Added a lint to an empty package that should fail to make sure that github actions is working correctly. This change should not be added to main.

--- a/packages/discvr-jbrowse/package.json
+++ b/packages/discvr-jbrowse/package.json
@@ -2,6 +2,7 @@
     "name": "discvr-jbrowse",
     "version": "0.0.0",
     "scripts": {
+        "lint": "eslint .",
         "test": "echo \"Testing jbrowse\""
     },
     "dependencies": {
