--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,10 @@ jobs:
     timeout-minutes: 15
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: ['18.x']
+
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -17,7 +21,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
       - name: Install dependencies
