--- a/packages/discvr-ui-components/package.json
+++ b/packages/discvr-ui-components/package.json
@@ -1,7 +1,16 @@
 {
     "name": "discvr-ui-components",
     "version": "0.0.0",
+    "scripts": {
+        "test": "echo \"Testing ui-components\"",
+        "lint": "eslint ."
+    },
     "dependencies": {
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "react-select": "^5.7.4",
+        "@mui/material": "5.14.17",
+        "@mui/icons-material":"^5.14.16",
+        "@mui/x-data-grid": "^6.0.1",
+        "eslint-config-custom": "*"
     }
 }
