--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.10",
+    "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "tsconfig": "*",
@@ -19,7 +22,12 @@
     "packages/*"
   ],
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.14.17"
+    "@mui/material": "^5.14.20",
+    "jest": "^29.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
