initial release setup and more lint fixes
Linter is now fully working but there are some errors in field-type-info that are effecting the build.

I currently have a release.yml that is temp and will be changed and I have setup tsup as a bundler for the build process when we get the actual release working.

--- a/packages/discvr-ui-components/package.json
+++ b/packages/discvr-ui-components/package.json
@@ -1,9 +1,14 @@
 {
     "name": "discvr-ui-components",
     "version": "0.0.0",
+    "main": "./dist/field-type-info.js",
+    "module": "./dist/field-type-info.mjs",
+    "types": "./dist/field-type-info.d.tsx",
     "scripts": {
         "test": "jest",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "build": "tsup field-type-info.tsx --format cjs,esm --dts",
+        "dev": "npm run build -- --watch"
     },
     "dependencies": {
         "react": "^17.0.0",
