--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@changesets/cli": "^2.27.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
