--- a/packages/discvr-ui-components/package.json
+++ b/packages/discvr-ui-components/package.json
@@ -10,13 +10,17 @@
         "build": "tsup field-type-info.tsx --format cjs,esm --dts",
         "dev": "npm run build -- --watch"
     },
+    "jest": {
+        "testEnvironment": "jsdom"
+    },
     "dependencies": {
-        "react": "^17.0.0",
-        "react-select": "^5.7.4",
+        "@mui/icons-material": "^5.14.16",
         "@mui/material": "^5.0.0",
-        "@mui/icons-material":"^5.14.16",
         "@mui/x-data-grid": "^6.0.1",
-        "eslint-config-custom": "*"
+        "eslint-config-custom": "*",
+        "jest-environment-jsdom": "^29.7.0",
+        "react": "^17.0.0",
+        "react-select": "^5.7.4"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.3",
