--- a/packages/discvr-ui-components/package.json
+++ b/packages/discvr-ui-components/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "jest",
         "lint": "eslint .",
-        "build": "tsup field-type-info.tsx --format cjs,esm --dts",
+        "build": "tsup src/*.tsx --format cjs,esm --dts",
         "dev": "npm run build -- --watch"
     },
     "jest": {
